<resources>
    <string name="app_name">SDFD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggest_dishes_for_dieters">Suggest Dishes For Dieters</string>
    <string name="hello_find_the_best_diet_foods_for_you">Hello, Find the best diet foods for you</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="calo">calo</string>
    <string name="Calo">Calo</string>
    <string name="menu">Menu</string>
</resources>