<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_scanproduct"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="Scan" />
        <item
        android:id="@+id/nav_calo"
        android:title="@string/Calo"
        android:icon="@drawable/ic_baseline_local_fire_department_24"/>
        <item
            android:id="@+id/nav_menu"
            android:title="@string/menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"/>
        <item android:title="Profile">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:title="Log out"
                    android:icon="@drawable/ic_menu_logout" />
            </menu>
        </item>
    </group>

</menu>